@@ -10,6 +10,7 @@ Version 1.2.6 (!!!!!!!!! 1.3.0 if includes plural forms !!!!!!!!!!!!!!!!)
 - poEdit now respects c-format and no-c-format when checking tokens correctness
 - [GTK2] added as-you-type spellchecking
 - position in translations list is no longer lost when saving the file
+- configure now correctly detects libdb4 with versioned symbols
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
